# win-service-rs

./: Cargo.toml  README.md
src/: action.rs  main.rs
